Completed revamping the search UI

--- a/themes/upbound/assets/scss/_variables.scss
+++ b/themes/upbound/assets/scss/_variables.scss
@@ -32,6 +32,8 @@ $up-grey-500:           #8E949B !default;
 $up-neutral-0:          #FFFFFF !default;
 $up-neutral-50:         #F2F2F4 !default;
 $up-neutral-100:        #E5E6E9 !default;
+$up-neutral-200:        #CDCDD3 !default;
+$up-neutral-400:        #9A9CA7 !default;
 $up-neutral-600:        #686A7C !default;
 
 $borderDark:            #283C42 !default;
