--- a/themes/upbound/assets/scss/_left-sidebar-nav.scss
+++ b/themes/upbound/assets/scss/_left-sidebar-nav.scss
@@ -1,51 +1,7 @@
 // Styling related to the left-side global navigation
 
 // Custom modifications to built-in bootstrap tooling for the left-hand-nav
-.left-sidebar-nav .list-group {
-
-    // Remove unwanted default list-group stylings
-    --bs-list-group-border-radius: 0;
-    --bs-list-group-item-padding-x: 0;
-    --bs-list-group-border-width: 0;
-
-    // Default nav item state
-    --bs-list-group-action-hover-bg: #{$up-neutral-50};
-
-    // Clicked on nav menu item
-    --bs-list-group-action-active-color: #{$up-purple-400};
-    --bs-list-group-action-active-bg: #{$up-purple-100};
-
-    // Active nav menu item
-    --bs-list-group-active-color: #{$up-purple-400};
-    --bs-list-group-active-bg: #{$up-purple-100};
-    --bs-accordion-border-radius: 4;
-
-    --bs-list-group-item-padding-y: 10px;
-
-    // The expand/collapse nav button uses the bootstrap accordion components
-    .accordion {
-        --bs-accordion-bg: transparent;
-        --bs-accordion-active-bg: transparent;
-        --bs-accordion-btn-padding-y: 10px;
-        --bs-accordion-btn-padding-x: 2px;
-        --bs-accordion-border-color: transparent;
-    }
-
-    .accordion-button{
-        --bs-accordion-btn-icon-width: 14px;
-        // size of the grey box containing the chevron
-        width: 22px;
-        height: 22px;
-
-        &:after{
-            margin-left: 1px;
-        }
-    }
-
-    &.top-level {
-        padding: 32px 28px;
-    }
-}
+// .left-sidebar-nav 
 
 .left-sidebar-nav{
     grid-area: left-sidebar-nav;
@@ -60,131 +16,14 @@
         background: #{$up-neutral-0} !important;
     }
 
-    .list-group {
-        cursor: pointer;
-    }
-
-    .search-icon-active{
-        padding-right: 10px;
-    }
-
-    .close-search {
-        background-color: #{$up-grey-300};
-        width: 20px;
-        height: 20px;
-        border-radius: 5px;
-    }
-
-    .no-results-container{
-        padding-left: 14px;
-    }
-
-    .no-results-text{
-        padding-left: 14px;
-        font-size: 16px;
-        color: #{$up-grey-500};
-    }
-
-    .search-results{
-        padding-top: 20px;
-    }
-
-    .search-input {
-        border: none;
-        background-color: inherit;
-        font-size: 16px;
-
-        &::placeholder{
-            color: #{$up-grey-500};
-        }
-
-        &:focus{
-            border: none !important;
-            outline: none !important;
-            box-shadow: none !important;
-        }
-    }
-
-    .grey-icon{
-        fill: #{$up-grey-500};
-    }
-
-    .nav-logo-search{
-        // max-width: 300px;
-        border-bottom: 1px solid #{$up-grey-300} !important;
-        padding-left: 12px;
-        padding-right: 12px;
-        padding-top: 15px;
-        padding-bottom: 15px;
-
-        .search-icon{
-            padding-right: 16px;
-        }
-
-        .close-nav{
-            padding-left: 16px;
-            padding-right: 16px;
-        }
-
-    }
-
     a{
         text-decoration: none;
         color: inherit;
         font-size: 16px;
     }
 
-    .nav-parent-container{
-        font-weight: 800;
-        font-size: .9rem;
-
-        border-radius: 8px;
-        padding: 12px 8px;
-
-        &:first-of-type.active {
-            color:  #{$up-purple-500};
-            background-color: #{$up-purple-50};
-        }
-
-        &:hover{
-            background-color: #{$up-neutral-50};
-        }
-        
-        .nav-parent-title {
-            font-size: 16px;
-        }
-    }
-
-    .icon-container{
-        padding-left: 12px;
-    }
-
     .button-container{
         padding-left: 12px;
     }
-
-    .nav-child{
-        padding-left: 24px;
-        border-radius: 8px;
-    }
-
-    .menu-expand{
-        background-color: #{$up-grey-300};
-        width: 25px;
-        height: 20px;
-        border-radius: 5px;
-        z-index: 999 !important;
-    }
-
-    .icon-container {
-        padding-right: 12px;
-    }
-
-    .nav-parent-icon {
-        fill: #{$up-purple-400};
-        height: 20px;
-        width: 20px;
-    }
-
 }
 
