--- a/themes/upbound/assets/scss/_top-nav.scss
+++ b/themes/upbound/assets/scss/_top-nav.scss
@@ -1,10 +1,94 @@
 // Styling related to the top navigation
 
+@mixin content-hierarchy {
+    border: 1px solid #CDCDD3;
+    background-color: white;
+    margin: -65px auto 0;
+    padding: 75px 10px 10px;
+    width: 424px;
+    position: relative;
+    z-index: 1;
+    max-height: 500px;
+    overflow: scroll;
+    border-radius: 8px;
+    box-shadow: 0 4px 4px 0 rgba(3, 7, 36, .12);
+}
+
 #top-nav {
     height: 60px;
-    border: 1px solid #{$up-neutral-100};
+    border-bottom: 1px solid #{$up-neutral-100};
 
     .logo-container {
         padding: 16px 40px;
+
+        a {
+            text-decoration: none;
+        }
+    }
+
+    .search-panel {
+        .search-container {
+            height: 59px;
+            width: 404px;
+            margin: auto;
+            background-color: white;
+            padding: 10px 4px 0 4px;
+            z-index: 2;
+            position: relative;
+
+            .search-group {
+                height: 38px;
+                padding: 0 8px;
+                position: relative;
+                border: 1px solid #CDCDD3;
+                border-radius: 8px;
+                background-color: white;
+
+                &:focus-within {
+                    border-color: #{$up-purple-500};
+                }
+    
+                .search-icon-active {
+                    padding-top: 4px;
+                }
+        
+                input {
+                    border: none;
+                    font-size: 14px;
+                    box-shadow: none;
+                    height: 100%;
+                    background-color: white;
+        
+                    &::placeholder {
+                        color: #{$up-neutral-400};
+                    }
+                }
+        
+                svg {
+                    fill: #{$up-neutral-600};
+                }
+
+                .close-search {
+                    cursor: pointer;
+                }
+            }
+        }
+
+        .search-results {
+            @include content-hierarchy;
+        }
+
+        .no-results-container {
+            @include content-hierarchy;
+            color: #{$up-neutral-400};
+
+            .iconDiv {
+                margin-right: 8px;
+                
+                .grey-icon {
+                    fill: #{$up-neutral-400};
+                }
+            }
+        }
     }
 }
