--- a/themes/upbound/layouts/partials/body/left-sidebar-nav.html
+++ b/themes/upbound/layouts/partials/body/left-sidebar-nav.html
@@ -1,10 +1,8 @@
 <div class="left-sidebar-nav offcanvas-xl offcanvas-start" tabindex="-1" id="left-nav-offcanvas" aria-labelledby="left-nav-offcanvas">
-    {{ partialCached "body/search-panel" . }}
-
     <nav aria-label="Documentation section navigation" class="sticky-top container px-0" id="left-nav-menu">
         <div class="list-group top-level d-flex">
             {{/*  First entry for the "Docs" section representing home.html  */}}
-            <div class="d-flex flex-row my-0 nav-parent-container position-relative {{if .IsHome }}active{{end}}" id="{{.Title}}">
+            <div class="d-flex flex-row my-0 nav-parent-container position-relative {{if .IsHome }}active{{end}}" id="Docs">
                 <a href="{{.Site.BaseURL}}" class="stretched-link">Docs</a>
             </div>
 
