--- a/themes/upbound/assets/scss/_docs-content-hierarchy.scss
+++ b/themes/upbound/assets/scss/_docs-content-hierarchy.scss
@@ -64,8 +64,24 @@
         }
     }
 
-    .nav-child{
-        padding-left: 24px;
-        border-radius: 8px;
+    .nav-child-container {
+        .nav-child{
+            padding-left: 24px;
+            border-radius: 8px;
+        }
+
+        .subpages {
+            padding-left: 24px;
+        }
+    }
+    
+    a {
+        text-decoration: none;
+        color: inherit;
+        font-size: 16px;
+    }
+
+    .button-container{
+        padding-left: 12px;
     }
 }
