--- a/themes/upbound/assets/scss/_content-body.scss
+++ b/themes/upbound/assets/scss/_content-body.scss
@@ -156,7 +156,7 @@
       border-top: none;
       border-left: none;
       border-right: none;
-      color: #{$gray-500};
+      color: #{$font-color-light};
 
       @include media-breakpoint-down(xl) {
         padding-left: 12px !important;
