fix accordion hover states

--- a/themes/upbound/assets/scss/_variables.scss
+++ b/themes/upbound/assets/scss/_variables.scss
@@ -22,6 +22,7 @@ $up-purple-400:         #7D4CD1 !default;
 $up-purple-500:         #402A7B !default;
 $up-purple-600:         #21194F !default;
 
+$up-grey-000:           #FFFFFF !default;
 $up-grey-100:           #F8F9F9 !default;
 $up-grey-200:           #F2F2F4 !default;
 $up-grey-300:           #E5E6E9 !default;
