--- a/themes/upbound/assets/scss/_content-body.scss
+++ b/themes/upbound/assets/scss/_content-body.scss
@@ -17,13 +17,13 @@
   // Override Bootstrap accordion colors in the body
   .accordion {
     --bs-accordion-border-color: #{$up-grey-300};
-    --bs-accordion-active-bg: #{$up-purple-100};
+    --bs-accordion-active-bg: #{$up-grey-000};
     --bs-accordion-btn-focus-border-color: #{$up-purple-400};
     --bs-accordion-button-focus-border-color: #{$up-purple-400};
     --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem $up-purple-400;
   }
 
-  // Improve spacing on open Bootstrap accordions
+  // Improve spacing and top-border on open Bootstrap accordions
   .accordion-body {
     border-top: 2px solid #{$up-grey-300};
     .highlight {
@@ -34,11 +34,19 @@
   .accordion-header {
     margin-top: 0px;
   }
+
+  // Accordion styling
   .accordion-button {
     font-weight: 900;
   }
   .accordion-item {
     border-width: 2px;
+  }
+  .accordion-button:hover {
+    outline: 2px solid #{$up-grey-600};
+  }
+  .accordion-button:not(.collapsed) {
+    color: #{$font-color-dark};
   }
 
   .content-title {
