add hover to right nav

--- a/themes/upbound/assets/scss/_right-sidebar-toc.scss
+++ b/themes/upbound/assets/scss/_right-sidebar-toc.scss
@@ -68,5 +68,9 @@
                 color: #{$font-color-dark} !important;
             }
         }
+
+        .nav-link:hover {
+            color: #{$font-color-dark} !important;   
+        }
     }
 }
