Add selection background color

--- a/themes/upbound/assets/scss/_color-mode-dark.scss
+++ b/themes/upbound/assets/scss/_color-mode-dark.scss
@@ -4,6 +4,7 @@
     // body and content
     --body-background: #1F2937;
     --body-font-color: #FAFAFA;
+    --body-selection: #E1CEFE50;
     --content-link-color: #8bcbe6;
     --anchor-link-color: #{darken(#FAFAFA, 25)};
 
