--- a/themes/upbound/assets/scss/_color-mode-light.scss
+++ b/themes/upbound/assets/scss/_color-mode-light.scss
@@ -4,6 +4,7 @@
     // body and content
     --body-background: white;
     --body-font-color: #030724;
+    --body-selection: #E1CEFE50;
     --content-link-color: #{$up-purple-400};
 
     --home-resource-bg: #{$up-grey-100};
