add hover state for home links

--- a/themes/upbound/assets/scss/_home.scss
+++ b/themes/upbound/assets/scss/_home.scss
@@ -78,6 +78,9 @@
             a {
                 color: #{$up-purple-400} !important;
             }
+            a:hover {
+                border-bottom: 1px solid #{$up-purple-400};
+            }
         }
 
         .about-image {
