fix underline style

--- a/themes/upbound/assets/scss/_home.scss
+++ b/themes/upbound/assets/scss/_home.scss
@@ -79,7 +79,7 @@
                 color: #{$up-purple-400} !important;
             }
             a:hover {
-                border-bottom: 1px solid #{$up-purple-400};
+                text-decoration: underline;
             }
         }
 
