--- a/themes/upbound/layouts/partials/body/top-nav.html
+++ b/themes/upbound/layouts/partials/body/top-nav.html
@@ -1,4 +1,4 @@
-<div id="top-nav" class="logo nav-logo-search d-flex flex-row">
+<div id="top-nav" class="logo nav-logo-search">
 
     <div class="logo-container">
         <a href="//www.upbound.io">
@@ -7,5 +7,5 @@
     </div>
 
     {{ partialCached "body/search-panel" . }}
-    
+
 </div>
