--- a/themes/upbound/assets/scss/_docs-content-hierarchy.scss
+++ b/themes/upbound/assets/scss/_docs-content-hierarchy.scss
@@ -57,6 +57,7 @@
 
         &:not(.disabled):hover{
             background-color: #{$up-neutral-50};
+            cursor: pointer;
         }
         
         .nav-parent-title {
