--- a/themes/upbound/layouts/partials/body/search-panel.html
+++ b/themes/upbound/layouts/partials/body/search-panel.html
@@ -16,7 +16,7 @@
                     data-site-lang="en"
                     >
             </div>
-            <div class="close-search align-self-center" id="close-search">
+            <div class="close-search align-self-center d-none" id="close-search">
                 {{partial "icons/x.svg" (dict "width" "12px" "height" "12px" "class" "grey-icon")}}
             </div>
         </div>
