--- a/themes/upbound/assets/scss/_code-theme-base.scss
+++ b/themes/upbound/assets/scss/_code-theme-base.scss
@@ -11,7 +11,7 @@
 .highlight {
   overflow-x: auto;
   width: 100% !important;
-  background-color: var(--code-block-background-color);
+  background-color: #{$up-grey-850n};
   display: flex !important;
   margin-top: 1rem; // prevent boxes from running together
   margin-bottom: 1rem;
@@ -36,13 +36,13 @@
 
   // Clipboard div
   .code-clipboard{
-    background-color: var(--code-block-background-color);
+    background-color: #{$up-grey-850n};
     display: flex !important;
     padding-right: 10px;
 
     .clipboard-button{
       border: 0;
-      color: $gray-500;
+      color: #{$up-grey-300n};
       background-color: inherit;
 
       .bi {
@@ -52,7 +52,7 @@
       }
 
       &:hover {
-        color: #fff;
+        color: #{$up-grey-000};
       }
     }
   }
@@ -69,8 +69,8 @@
     padding-top: .5rem;
 
     code {
-      color: #f8f9fa;   // Code color if there is no defined highlighter style
-      background-color: var(--code-block-background-color);
+      color: #{$up-grey-000};   // Code color if there is no defined highlighter style
+      background-color: #{$up-grey-850n};
       padding: 0.2em 0.4em;
       font-size: $up-code-font-size !important; //.95rem !important;
       line-height: $up-code-line-height; //1.45em;
