--- a/themes/upbound/assets/scss/_code-theme.scss
+++ b/themes/upbound/assets/scss/_code-theme.scss
@@ -8,7 +8,7 @@
   --code-highlight-background: #{$up-grey-700n};
 
 
-  /* Theme: Customized by Upbound. Was originally Dracula */
+  /* Theme: Colors customized by Upbound. Was originally Dracula */
 
   /* Background */
   .bg {
