--- a/themes/upbound/assets/scss/_variables.scss
+++ b/themes/upbound/assets/scss/_variables.scss
@@ -35,6 +35,7 @@ $up-grey-600:           #CDCDD3 !default;
 
 $up-grey-300n:          #B3B4BD !default;
 $up-grey-700n:          #4E5165 !default;
+$up-grey-800n:          #353950 !default;
 $up-grey-850n:          #292C45 !default;
 
 $up-blue-300n:          #7AC0F8 !default;
