don't cache the stylesheet generation
Signed-off-by: Pete Lumbis <pete@upbound.io>

--- a/themes/upbound/layouts/partials/head/base.html
+++ b/themes/upbound/layouts/partials/head/base.html
@@ -10,7 +10,7 @@
 <link rel="canonical" href="https://docs.upbound.io{{ .Permalink }}">
 
 {{ partialCached "head/js/color-mode-js" . }}
-{{ partialCached "head/stylesheets/stylesheet" . }}
+{{ partial "head/stylesheets/stylesheet" . }}
 {{ partialCached "head/favicons" . }}
 
 {{/*  {{ partial "social" . }}  */}}
