Update padding around nested sections

--- a/themes/upbound/assets/scss/_left-sidebar-nav.scss
+++ b/themes/upbound/assets/scss/_left-sidebar-nav.scss
@@ -13,5 +13,9 @@
     &.offcanvas-xl {
         background: #{$up-neutral-0} !important;
     }
+
+    .left-offset {
+        min-width: 28px;
+    }
 }
 
