--- a/themes/upbound/assets/scss/_docs-content-hierarchy.scss
+++ b/themes/upbound/assets/scss/_docs-content-hierarchy.scss
@@ -1,6 +1,9 @@
 // search results display clones of the left side-nav content
 // the styles below will apply to both the side-nav and the search results
 
+$nav-section-lr-padding: 8px;
+$nested-offset: 12px;
+
 #search-results, #left-nav-menu {
     .list-group {
 
@@ -33,7 +36,7 @@
         }
     
         .accordion-button{
-            --bs-accordion-btn-icon-width: 14px;
+            --bs-accordion-btn-icon-width: 17px;
             // size of the grey box containing the chevron
             width: 22px;
             height: 22px;
@@ -53,7 +56,7 @@
         font-size: .9rem;
 
         border-radius: 8px;
-        padding: 12px 8px;
+        padding: 12px $nav-section-lr-padding;
 
         &:not(.disabled):hover{
             background-color: #{$up-neutral-50};
@@ -67,12 +70,14 @@
 
     .nav-child-container {
         .nav-child{
-            padding-left: 24px;
             border-radius: 8px;
+            padding-left: calc(#{$nav-section-lr-padding} + #{$nested-offset});
+            padding-right: $nav-section-lr-padding;
         }
 
-        .subpages {
-            padding-left: 24px;
+        .subpages .nav-child {
+            padding-left: calc(#{$nav-section-lr-padding} + (#{$nested-offset * 2}));
+            padding-right: $nav-section-lr-padding;
         }
     }
     
@@ -83,6 +88,12 @@
     }
 
     .button-container{
-        padding-left: 12px;
+        padding-left: 0px;
+    }
+
+    .left-offset {
+        &.hide {
+            opacity: 0;
+        }
     }
 }
