--- a/themes/upbound/layouts/partials/body/left-sidebar-nav.html
+++ b/themes/upbound/layouts/partials/body/left-sidebar-nav.html
@@ -4,6 +4,7 @@
         <div class="list-group top-level d-flex">
             {{/*  First entry for the "Docs" section representing home.html  */}}
             <div class="d-flex flex-row my-0 nav-parent-container position-relative {{if .IsHome }}active{{end}}" id="Docs">
+                <div class="left-offset hide"></div> <!-- Used to keep nav titles aligned evenly by flex -->
                 <a href="{{.Site.BaseURL}}" class="stretched-link">Docs</a>
             </div>
 
@@ -17,53 +18,61 @@
 
                     <!-- Parent Menu Button -->
                     <div class="d-flex flex-row my-0 nav-parent-container position-relative  {{if eq $currentPage .}}active{{end}}" id="{{.Section}}" data-bs-toggle="collapse" data-bs-target="#collapse-{{$id}}" onclick="this.querySelector('.accordion-button').classList.toggle('collapsed')">
-                        <span class="nav-parent-title">{{.Title }}</span>
-                        <div class="button-container">
+                        <div class="button-container left-offset">
                             <div id="{{.Section}}-button" class="mx-0 accordion-button accordion accordion-item {{if not $expand}} collapsed {{end}}" type="button" aria-expanded="false" aria-controls="collapse-{{$id}}" title="Close/Expand"></div>
                         </div>
+                        <span class="nav-parent-title">{{.Title }}</span>
                     </div>
 
                     <!-- Child Pages -->
-                    <div class="nav-child-container px-0 mx-0" id="{{.Section}}-children">
+                    <div class="nav-child-container" id="{{.Section}}-children">
                         <div class="collapse list-group {{if $expand}} show {{end}}" id="collapse-{{$id}}">
-                            <a href="{{.Permalink}}" class="list-group-item list-group-item-action nav-child mb-0 stretched-link {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
-                                Overview
-                            </a>
+                            <div class="list-group-item list-group-item-action nav-child d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
+                                <div class="left-offset hide"></div>
+                                <a href="{{.Permalink}}" class="stretched-link child-link">
+                                    Overview
+                                </a>
+                            </div>
 
                             {{ range .Pages }}
 
                                 {{ if .Pages }}
-                                <!-- Subpages -->
+                                    <!-- Show Section Title and its Subpages -->
                                     {{/*  Generate a random subpage ID to use as the collapse target ID  */}}
                                     {{ $subid := substr (sha1 .Permalink) 0 8 }}
                                     {{ $subexpand := (or (eq $currentPage .) (eq $currentPage.Parent .)) }}
 
                                     <!-- Parent Menu Button -->
-                                    <div class="list-group-item list-group-item-action nav-child subheader d-flex flex-rowpy-2 my-0 position-relative {{if eq $currentPage .}}active{{end}}" id="{{.Title}}">
-                                        <a href="{{.Permalink}}" class="d-flex stretched-link subheader-link">
+                                    <div class="list-group-item list-group-item-action nav-child d-flex flex-row subheader position-relative {{if eq $currentPage .}}active{{end}} {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}" id="{{.Title}}">
+                                        <div class="button-container left-offset z-3 {{if not .Pages}}hide{{end}}"> <!-- Increase z-index to put the button over the stretched-link -->
+                                            <div id="{{.Title}}-button" class="mx-0 accordion-button accordion accordion-item {{if not $subexpand}} collapsed {{end}}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-{{$subid}}" aria-expanded="false" aria-controls="collapse-{{$subid}}" title="Close/Expand" onclick="this.classList.toggle('down');"></div>
+                                        </div>
+                                        <a href="{{.Permalink}}" class="d-flex stretched-link subheader-link child-link">
                                             {{.Title }}
                                         </a>
-                                        {{ if .Pages }}
-                                            <div class="button-container z-3"> <!-- Increase z-index to put the button over the stretched-link -->
-                                                <div id="{{.Title}}-button" class="mx-0 accordion-button accordion accordion-item {{if not $subexpand}} collapsed {{end}}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-{{$subid}}" aria-expanded="false" aria-controls="collapse-{{$subid}}" title="Close/Expand" onclick="this.classList.toggle('down');"></div>
-                                            </div>
-                                        {{ end }}
                                     </div>
 
-                                    <div id="{{.Title}}-children">
+                                    <div id="{{.Title}}-children" class="{{ if .Page.Params.tocHidden }}d-none{{end}}">
                                         <div class="subpages collapse list-group {{if $subexpand}} show {{end}}" id="collapse-{{$subid}}">
                                             {{ range .Pages }}
-                                                <a href="{{.Permalink}}" class="list-group-item list-group-item-action nav-child mb-0 stretched-link {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
-                                                    {{ .Title }}
-                                                </a>
+                                                <div class="list-group-item list-group-item-action nav-child d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
+                                                    <div class="left-offset hide"></div>
+                                                    <a href="{{.Permalink}}" class="stretched-link child-link">
+                                                        {{ .Title }}
+                                                    </a>
+                                                </div>
                                             {{ end }}
                                         </div>
                                     </div>
 
                                 {{ else }}
-                                    <a href="{{.Permalink}}" class="list-group-item list-group-item-action nav-child mb-0 stretched-link {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
-                                        {{ .Title }}
-                                    </a>
+                                    <!-- Show Section Title only -->
+                                    <div class="list-group-item list-group-item-action nav-child d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
+                                        <div class="left-offset hide"></div>
+                                        <a href="{{.Permalink}}" class="stretched-link child-link">
+                                            {{ .Title }}
+                                        </a>
+                                    </div>
                                 {{ end }}
                                 
                             {{ end }}
