Add keystroke to focus on search input

--- a/themes/upbound/layouts/partials/body/search-panel.html
+++ b/themes/upbound/layouts/partials/body/search-panel.html
@@ -10,7 +10,7 @@
                     type="text"
                     class="form-control form-control-sm search-input"
                     id="search-input"
-                    placeholder="Search the docs"
+                    placeholder="Type &#8223;/&#8223; to Search Docs"
                     maxlength="64"
                     data-site-base-url="{{ .Site.BaseURL }}"
                     data-site-lang="en"
