--- a/themes/upbound/layouts/partials/body/search-panel.html
+++ b/themes/upbound/layouts/partials/body/search-panel.html
@@ -1,4 +1,4 @@
-<div id="search-panel" class="search-panel sticky-top container px-0" >
+<div id="search-panel" class="search-panel container px-0" >
     <div class="search-container">
         <div class="search-group d-flex flex-row">
             <div class="search-icon-active" id="search-icon-active">
@@ -16,7 +16,7 @@
                     data-site-lang="en"
                     >
             </div>
-            <div class="close-search align-self-center d-none" id="close-search">
+            <div class="close-search d-none" id="close-search">
                 {{partial "icons/x.svg" (dict "width" "12px" "height" "12px" "class" "grey-icon")}}
             </div>
         </div>
