--- a/themes/upbound/layouts/partials/body/top-nav.html
+++ b/themes/upbound/layouts/partials/body/top-nav.html
@@ -1,4 +1,4 @@
-<div id="top-nav" class="logo nav-logo-search">
+<div id="top-nav" class="logo nav-logo-search sticky-top">
 
     <div class="logo-container">
         <a href="//www.upbound.io">
