update hover state for right anchor link nav

--- a/themes/upbound/assets/scss/_right-sidebar-toc.scss
+++ b/themes/upbound/assets/scss/_right-sidebar-toc.scss
@@ -70,7 +70,7 @@
         }
 
         .nav-link:hover {
-            color: #{$font-color-dark} !important;   
+            text-decoration: underline;   
         }
     }
 }
