--- a/themes/upbound/assets/scss/bootstrap/_list-group.scss
+++ b/themes/upbound/assets/scss/bootstrap/_list-group.scss
@@ -61,11 +61,6 @@
     text-decoration: none;
     background-color: var(--#{$prefix}list-group-action-hover-bg);
   }
-
-  &:active {
-    color: var(--#{$prefix}list-group-action-active-color);
-    background-color: var(--#{$prefix}list-group-action-active-bg);
-  }
 }
 
 // Individual list items
@@ -100,7 +95,7 @@
   &.active {
     z-index: 2; // Place active items above their siblings for proper border styling
     color: var(--#{$prefix}list-group-active-color);
-    background-color: var(--#{$prefix}list-group-active-bg);
+    background-color: var(--#{$prefix}list-group-active-bg) !important;
     border-color: var(--#{$prefix}list-group-active-border-color);
   }
 
