--- a/themes/upbound/layouts/partials/body/left-sidebar-nav.html
+++ b/themes/upbound/layouts/partials/body/left-sidebar-nav.html
@@ -27,12 +27,14 @@
                     <!-- Child Pages -->
                     <div class="nav-child-container" id="{{.Section}}-children">
                         <div class="collapse list-group {{if $expand}} show {{end}}" id="collapse-{{$id}}">
-                            <div class="list-group-item list-group-item-action nav-child d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
-                                <div class="left-offset hide"></div>
-                                <a href="{{.Permalink}}" class="stretched-link child-link">
-                                    Overview
-                                </a>
-                            </div>
+                            {{if .Content}}
+                                <div class="list-group-item list-group-item-action nav-child child-link-container d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
+                                    <div class="left-offset hide"></div>
+                                    <a href="{{.Permalink}}" class="stretched-link child-link">
+                                        Overview
+                                    </a>
+                                </div>
+                            {{end}}
 
                             {{ range .Pages }}
 
@@ -41,21 +43,32 @@
                                     {{/*  Generate a random subpage ID to use as the collapse target ID  */}}
                                     {{ $subid := substr (sha1 .Permalink) 0 8 }}
                                     {{ $subexpand := (or (eq $currentPage .) (eq $currentPage.Parent .)) }}
+                                    {{ $noContent := not .Content }}
+                                    {{ $hasContent := not $noContent }}
 
                                     <!-- Parent Menu Button -->
-                                    <div class="list-group-item list-group-item-action nav-child d-flex flex-row subheader position-relative {{if eq $currentPage .}}active{{end}} {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}" id="{{.Title}}">
+                                    <div class="list-group-item list-group-item-action nav-child d-flex flex-row subheader position-relative {{ if .Page.Params.tocHidden }}d-none{{end}}" id="{{.Title}}" data-bs-toggle="collapse" data-bs-target="#collapse-{{$subid}}" onclick="this.querySelector('.accordion-button').classList.toggle('collapsed');">
                                         <div class="button-container left-offset z-3 {{if not .Pages}}hide{{end}}"> <!-- Increase z-index to put the button over the stretched-link -->
-                                            <div id="{{.Title}}-button" class="mx-0 accordion-button accordion accordion-item {{if not $subexpand}} collapsed {{end}}" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-{{$subid}}" aria-expanded="false" aria-controls="collapse-{{$subid}}" title="Close/Expand" onclick="this.classList.toggle('down');"></div>
+                                            <div id="{{.Title}}-button" class="mx-0 accordion-button accordion accordion-item {{if not $subexpand}} collapsed {{end}}" type="button" aria-expanded="false" aria-controls="collapse-{{$subid}}" title="Close/Expand" ></div>
                                         </div>
-                                        <a href="{{.Permalink}}" class="d-flex stretched-link subheader-link child-link">
-                                            {{.Title }}
-                                        </a>
+                                        <span class="subheader-title">{{.Title }}</span>
+                                        <!-- <a href="{{.Permalink}}" class="d-flex stretched-link subheader-link child-link">
+                                            {{.Title }} - hasContent: {{$hasContent}}
+                                        </a> -->
                                     </div>
 
                                     <div id="{{.Title}}-children" class="{{ if .Page.Params.tocHidden }}d-none{{end}}">
                                         <div class="subpages collapse list-group {{if $subexpand}} show {{end}}" id="collapse-{{$subid}}">
+                                            {{if .Content}}
+                                                <div class="list-group-item list-group-item-action nav-child child-link-container subheader-overview d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
+                                                    <div class="left-offset hide"></div>
+                                                    <a href="{{.Permalink}}" class="stretched-link child-link">
+                                                        Overview
+                                                    </a>
+                                                </div>
+                                            {{end}}
                                             {{ range .Pages }}
-                                                <div class="list-group-item list-group-item-action nav-child d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
+                                                <div class="list-group-item list-group-item-action nav-child child-link-container d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
                                                     <div class="left-offset hide"></div>
                                                     <a href="{{.Permalink}}" class="stretched-link child-link">
                                                         {{ .Title }}
@@ -67,7 +80,7 @@
 
                                 {{ else }}
                                     <!-- Show Section Title only -->
-                                    <div class="list-group-item list-group-item-action nav-child d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
+                                    <div class="list-group-item list-group-item-action nav-child child-link-container d-flex flex-row {{if eq $currentPage .}}active{{end}} {{ if .Page.Params.tocHidden }}d-none{{end}}">
                                         <div class="left-offset hide"></div>
                                         <a href="{{.Permalink}}" class="stretched-link child-link">
                                             {{ .Title }}
