Add offset for TOC content jumping

--- a/themes/upbound/assets/scss/_right-sidebar-toc.scss
+++ b/themes/upbound/assets/scss/_right-sidebar-toc.scss
@@ -23,6 +23,7 @@
         grid-area: right-sidebar-toc;
         overflow-y: auto;
         height: 1fr;
+        width: 100%;
     }
 
     .on-this-page {
