Bugfix: search dropdown not closing when clicking on top portion of viewport

--- a/themes/upbound/assets/scss/_top-nav.scss
+++ b/themes/upbound/assets/scss/_top-nav.scss
@@ -60,6 +60,12 @@
     }
 
     .search-panel {
+        pointer-events: none; 
+
+        & > * {
+            pointer-events: auto; 
+        }
+
         .search-container {
             height: 59px;
             max-width: 404px;
