Update padding and right TOC scrolling

--- a/themes/upbound/assets/scss/_left-sidebar-nav.scss
+++ b/themes/upbound/assets/scss/_left-sidebar-nav.scss
@@ -3,16 +3,13 @@
 // Custom modifications to built-in bootstrap tooling for the left-hand-nav/a
 #left-nav-menu {
     overflow-y: scroll;
-    height: 100vh;
+    height: auto;
     position: sticky;
     top: 40px;
+    max-height: 100vh;
+    padding-bottom: 60px;
 
-    -ms-overflow-style: none;  /* Internet Explorer 10+ */
-    scrollbar-width: none;  /* Firefox */
-    
-    &::-webkit-scrollbar { 
-        display: none;  /* Safari and Chrome */
-    }
+    @include scrollbar-hidden;
 }
 
 .left-sidebar-nav{
