--- a/themes/upbound/assets/scss/bootstrap/_mixins.scss
+++ b/themes/upbound/assets/scss/bootstrap/_mixins.scss
@@ -29,6 +29,7 @@
 @import "mixins/lists";
 @import "mixins/forms";
 @import "mixins/table-variants";
+@import "mixins/scrollbar";
 
 // Skins
 @import "mixins/border-radius";
