--- a/themes/upbound/assets/scss/_docs-content-hierarchy.scss
+++ b/themes/upbound/assets/scss/_docs-content-hierarchy.scss
@@ -55,7 +55,7 @@ $font-size: 14px;
         }
     
         &.top-level {
-            padding: 32px 28px;
+            padding: 32px 28px 0px;
         }
     }
 
