--- a/themes/upbound/assets/scss/_right-sidebar-toc.scss
+++ b/themes/upbound/assets/scss/_right-sidebar-toc.scss
@@ -2,7 +2,7 @@
 
 .right-sidebar-toc{
     padding-bottom: 3rem;
-    margin-top: 40px;
+    // margin-top: 40px;
 
     @include media-breakpoint-down(xl) {
         margin: 0px !important;
@@ -19,11 +19,15 @@
     .toc {
         font-size: 14px;
         position: sticky;
-        top: 80px;
+        padding-top: 40px;
         grid-area: right-sidebar-toc;
-        overflow-y: auto;
-        height: 1fr;
+        overflow-y: scroll;
+        height: auto;
         width: 100%;
+        max-height: 100vh;
+        padding-bottom: 80px;
+
+        @include scrollbar-hidden;
     }
 
     .on-this-page {
