--- a/themes/upbound/assets/scss/_right-sidebar-toc.scss
+++ b/themes/upbound/assets/scss/_right-sidebar-toc.scss
@@ -2,7 +2,7 @@
 
 .right-sidebar-toc{
     padding-bottom: 3rem;
-    // margin-top: 40px;
+    margin-top: 40px;
 
     @include media-breakpoint-down(xl) {
         margin: 0px !important;
@@ -19,15 +19,11 @@
     .toc {
         font-size: 14px;
         position: sticky;
-        padding-top: 40px;
+        top: 80px;
         grid-area: right-sidebar-toc;
-        overflow-y: scroll;
-        height: auto;
+        overflow-y: auto;
+        height: 1fr;
         width: 100%;
-        max-height: 100vh;
-        padding-bottom: 80px;
-
-        @include scrollbar-hidden;
     }
 
     .on-this-page {
