move contrib link to the footer
Signed-off-by: Pete Lumbis <pete@upbound.io>

--- a/themes/upbound/layouts/partials/footer/content.html
+++ b/themes/upbound/layouts/partials/footer/content.html
@@ -49,6 +49,7 @@
         <div class="footer-heading">More</div>
         <div class="py-2"><a href="https://www.upbound.io/terms">Terms & Conditions</a></div>
         <div class="py-2"><a href="https://www.upbound.io/privacy">Privacy Policy</a></div>
+        <div class="py-2"><a href="/contribute">Contribute to the docs</a></div>
     </div>
 
 </div>
