fix code highlight

--- a/themes/upbound/assets/scss/_code-theme.scss
+++ b/themes/upbound/assets/scss/_code-theme.scss
@@ -42,7 +42,7 @@
   }
   /* LineHighlight */
   .chroma .hl {
-    background-color: #ffffcc;
+    background-color: #{$up-grey-700n};
   }
   /* LineNumbersTable */
   .chroma .lnt {
