--- a/themes/upbound/layouts/partials/head/base.html
+++ b/themes/upbound/layouts/partials/head/base.html
@@ -6,12 +6,9 @@
 <meta name="description" content="{{ .Page.Params.description | default .Site.Params.description | markdownify }}">
 <meta property="og:url"  content="{{ .Permalink }}" />
 
-<title>Upbound Docs</title>
-    {{/*  {{- if .IsHome -}}{{- .Site.Title | markdownify }} · {{.Site.Params.subtitle | markdownify }} {{- else }}{{- .Title | markdownify}} · {{ .Site.Title | markdownify }} {{ if and (ne .Page.Params.version "0") (ne .Page.Params.version "master")}}v{{.Page.Params.version }}{{end}}{{if eq .Page.Params.version "master"}}{{.Page.Params.version }}{{end}}{{ end }}</title>  */}}
+<title>Upbound Docs {{if not .IsHome }} - {{.Title }} {{ end }}  </title>
 <link rel="canonical" href="https://docs.upbound.io{{ .Permalink }}">
 
 {{ partialCached "head/js/color-mode-js" . }}
 {{ partial "head/stylesheets/stylesheet" . }}
 {{ partialCached "head/favicons" . }}
-
-{{/*  {{ partial "social" . }}  */}}
