--- a/themes/upbound/layouts/partials/head/meta-common.html
+++ b/themes/upbound/layouts/partials/head/meta-common.html
@@ -6,6 +6,7 @@
 <link rel="preload" href="/fonts/Avenir-Roman.woff2" as="font" type="font/woff2"
 crossorigin>
 <meta name="msvalidate.01" content="8A1818BC669E9D5B20F7042D6F3E28B4" />
+<meta name="google-site-verification" content="k9xW_HtNTQupQuKkfjchXIC5OtoYzRSeAWGdMThvImw" />
 {{/*  <meta property="og:image"           content="/img/logos/up-purple.webp" />
 <meta property="twitter:card"       content="/img/crossplane-logo-og.webp" />
 <meta property="og:image:width"     content="600" />
